# rust_stringz

./: CHANGELOG.md  Cargo.toml  README.md
src/: count_occurences.rs  count_occurrences.rs  is_palindrome.rs  lib.rs  to_lowercase.rs  to_uppercase.rs
